--- a/PlatziHawai/index.html
+++ b/PlatziHawai/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="css/index.css" type="text/css">
     <title>PlatziConf Hawaii</title>
   </head>
 
@@ -45,6 +45,39 @@
         </div>
       </nav>
     <!-- Fin navbar  -->
+
+    <!-- Inicio main  -->
+    <section id="main">
+      <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-pause="false">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/hawaii.jpg" class="d-block w-100" alt="Hawaii 1">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/hawaii2.jpg" class="d-block w-100" alt="Hawaii 2">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/hawaii3.jpeg" class="d-block w-100" alt="Hawaii 3">
+          </div>
+          <div class="overlay">
+            <div class="container">
+              <div class="row align-items-center">
+                <div class="col-md-6 offset-md-6 text-center text-md-end">
+                  <h1>Platzi Conf Hawaii</h1>
+                  <p class="d-none d-md-block">Platzi Conf llega por primera vez a Hawaii un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que estan creando el futuro de internet.
+                    Ven a conocer a miembros del Team Platzi, a otros estudiante de Platzi y a los oraldoes que estan creando el futuro de internet. Te esperamos!
+                  </p>
+                  <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
+                  <button type="button" class="btn btn-platzi">Comprar tickets</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Fin main  -->
 
     <!-- InicioFooter  -->
     <footer id="footer" class="pb-4 pt-4">
