Agregando un contenedor de ancho completo

--- a/PlatziHawai/index.html
+++ b/PlatziHawai/index.html
@@ -76,8 +76,93 @@
         </div>
       </div>
     </section>
-
     <!-- Fin main  -->
+
+    <!-- Inicio Speakers -->
+    <section id="speakers" class="mt-4">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center text-uppercase">
+            <small>Conoce a los</small>
+            <h2>Oradores</h2>
+          </div>
+        </div>
+        <div class="row"> 
+          <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card">
+              <img src="assets/speakers/sacha.jpg" class="card-img-top" alt="Foto de Sacha">
+              <div class="card-body">
+                <div class="badges mb-2">
+                  <span class="badge rounded-pill bg-warning">JavaScript</span>
+                  <span class="badge rounded-pill bg-info">React</span>
+                </div>
+                <h5 class="card-title mb-0">Sacha Lifszyc</h5>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil nesciunt hic praesentium tenetur dignissimos dolorum deleniti distinctio quod doloribus nemo aperiam debitis temporibus officia, ex enim delectus? A, distinctio ipsam?</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card">
+              <img src="assets/speakers/leonidas2.jpeg" class="card-img-top" alt="Foto de Sacha">
+              <div class="card-body">
+                <div class="badges mb-2">
+                  <span class="badge rounded-pill bg-warning">C#</span>
+                  <span class="badge rounded-pill bg-info">Movil</span>
+                </div>
+                <h5 class="card-title mb-0">Leonidas Esteban</h5>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil nesciunt hic praesentium tenetur dignissimos dolorum deleniti distinctio quod doloribus nemo aperiam debitis temporibus officia, ex enim delectus? A, distinctio ipsam?</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card">
+              <img src="assets/speakers/freddy.jpeg" class="card-img-top" alt="Foto de Sacha">
+              <div class="card-body">
+                <div class="badges mb-2">
+                  <span class="badge rounded-pill bg-warning">Startup</span>
+                  <span class="badge rounded-pill bg-info">Programacion</span>
+                </div>
+                <h5 class="card-title mb-0">Freddy Vega</h5>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil nesciunt hic praesentium tenetur dignissimos dolorum deleniti distinctio quod doloribus nemo aperiam debitis temporibus officia, ex enim delectus? A, distinctio ipsam?</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card">
+              <img src="assets/speakers/cvander.jpeg" class="card-img-top" alt="Foto de Sacha">
+              <div class="card-body">
+                <div class="badges mb-2">
+                  <span class="badge rounded-pill bg-warning">PHP</span>
+                  <span class="badge rounded-pill bg-info">MySQL</span>
+                </div>
+                <h5 class="card-title mb-0">Christian Van Der H.</h5>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil nesciunt hic praesentium tenetur dignissimos dolorum deleniti distinctio quod doloribus nemo aperiam debitis temporibus officia, ex enim delectus? A, distinctio ipsam?</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Fin Speakers -->
+
+    <!-- Inicio Lugar y fecha -->
+    <section id="place-time">
+      <div class="container-fluid">
+        <div class="row">
+                <div class="col-12 col-lg-6 p-0">
+                  <img src="assets/honolulu.jpg" alt="Honolulu">
+                 </div>
+                <div class="col-12 col-lg-6 pt-4 pb-4">
+                    <h2>Honolulu - Octubre 2025</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit ducimus provident exercitationem aperiam. Quidem veritatis qui nihil rerum reiciendis repellendus esse incidunt laboriosam ratione delectus, cum dolores sint voluptatum eaque.
+                    Neque sed vel quidem. Ex quaerat consequuntur quod, sequi fugiat dignissimos excepturi nobis facilis ipsum provident sint voluptates quae incidunt labore, perferendis porro voluptas earum mollitia ullam repellat pariatur necessitatibus.</p>
+                    <a href="#" class="btn btn-outline-light">Conoce mas</a>
+                </div>
+        </div>
+      </div>      
+    </section>
+
+    <!-- Fin lugar y fecha  -->
 
     <!-- InicioFooter  -->
     <footer id="footer" class="pb-4 pt-4">
