--- a/PlatziHawai/index.html
+++ b/PlatziHawai/index.html
@@ -11,9 +11,9 @@
     <title>PlatziConf Hawaii</title>
   </head>
 
-  <body>
+  <body data-bs-spy="scroll"  data-bs-target=" #navbarSupportedContent" data-bs-offset="56">
     <!-- inicio navbar  -->
-    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="assets/platzi-logo.png" alt="Platzi logo" >
@@ -26,16 +26,16 @@
             <!-- ms-auto aling item lefth me-auto aling item right-->
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">La conferencica</a>
+                <a class="nav-link" aria-current="page" href="#main">La conferencica</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Los oradores</a>
+                <a class="nav-link" href="#speakers">Los oradores</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Lugar y la fecha</a>
+                <a class="nav-link" href="#place-time">Lugar y la fecha</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Conviertete en orador</a>
+                <a class="nav-link" href="#conviertete-en-orador">Conviertete en orador</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-platzi" href="#">Comprar tickets</a>
@@ -68,7 +68,7 @@
                     Ven a conocer a miembros del Team Platzi, a otros estudiante de Platzi y a los oraldoes que estan creando el futuro de internet. Te esperamos!
                   </p>
                   <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
-                  <button type="button" class="btn btn-platzi">Comprar tickets</button>
+                  <a class="btn btn-platzi" href="#" data-bs-toggle="modal" data-bs-target="#modalCompra">Comprar Tickets</a>
                 </div>
               </div>
             </div>
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="row"> 
-          <div class="col-md-6 col-lg-3 mb-4">
+          <div class="col-md-6 col-lg-4 mb-4">
             <div class="card">
               <img src="assets/speakers/sacha.jpg" class="card-img-top" alt="Foto de Sacha">
               <div class="card-body">
@@ -101,7 +101,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-4">
+          <div class="col-md-6 col-lg-4 mb-4">
             <div class="card">
               <img src="assets/speakers/leonidas2.jpeg" class="card-img-top" alt="Foto de Sacha">
               <div class="card-body">
@@ -114,7 +114,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-4">
+          <div class="col-md-6 col-lg-4 mb-4">
             <div class="card">
               <img src="assets/speakers/freddy.jpeg" class="card-img-top" alt="Foto de Sacha">
               <div class="card-body">
@@ -127,7 +127,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-4">
+          <div class="col-md-6 col-lg-4 mb-4">
             <div class="card">
               <img src="assets/speakers/cvander.jpeg" class="card-img-top" alt="Foto de Sacha">
               <div class="card-body">
@@ -164,7 +164,7 @@
     <!-- Fin lugar y fecha  -->
 
     <!-- Inicio Conviertete en orador -->
-    <section id="conviertete-en-orador " class="pt-2 pb-2">
+    <section id="conviertete-en-orador" class="pt-2 pb-2">
       <div class="container">
         <div class="row">
           <div class="col text-center">
@@ -174,7 +174,7 @@
         </div>
         <div class="row">
           <div class="col text-center">
-            Anótate como orador para dar una charla ignite. Cuéntanos de qué
+            Anótate como orador para dar una <abbr title="Charla de 5 minutos" data-bs-toggle="tooltip">charla ignite</abbr>. Cuéntanos de qué
             quieres hablar!
           </div>
         </div>
@@ -252,7 +252,27 @@
     <!-- Cierre footer  -->
   </body>
 
+  <!-- Inicio Modal -->
+  <div class="modal fade" id="modalCompra" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- Fin Modal-->
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 
 </html>
